# exifmwg

./: .clang-format  .clang-tidy  .cmake-format.json  .codespellrc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  Taskfile.yml  pyproject.toml
.github/: .codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  static-analysis.yml
cmake/modules/: FindEXPAT.cmake
patches/: disable-exiv2-install.patch
src/exif_mwg/: __about__.py  __init__.py  _utils.py  errors.py  models.py  mwg.py
src/exifmwg/: DimensionsStruct.cpp  DimensionsStruct.hpp  Errors.hpp  Image.cpp  Image.hpp  ImageMetadata.cpp  ImageMetadata.hpp  KeywordInfoModel.cpp  KeywordInfoModel.hpp  Logging.cpp  Logging.hpp  MetadataKeys.hpp  Orientation.hpp  PythonBindable.hpp  RegionInfoStruct.cpp  RegionInfoStruct.hpp  XmpAreaStruct.cpp  XmpAreaStruct.hpp  XmpSerializable.hpp  XmpUtils.cpp  XmpUtils.hpp  __about__.py  __init__.py  _core.cpp  _core.pyi  _utils.py  bindings.cpp  bindings.pyi  clearing.cpp  clearing.hpp  models.cpp  models.hpp  mwg.py  parsers.cpp  parsers.hpp  reading.cpp  reading.hpp  utils.cpp  utils.hpp  writing.cpp  (+1 more)
tests/: __init__.py  conftest.py  mixins.py  test_image_metadata.py  utils.py
tests/fixtures/: sample1.jpg.json  sample2.jpg.json  sample3.jpg.json  sample4.jpg.json
tests/unit/: CMakeLists.txt  TestUtils.cpp  TestUtils.hpp  testDimensionsStruct.cpp  testImageMetadata.cpp  testKeywordInfo.cpp  testOrientation.cpp  testReadMetadata.cpp  testXmpArea.cpp  test_clear_metadata.cpp  test_image_metadata.cpp  test_keyword_info.cpp  test_read_metadata.cpp  test_region_info.cpp  test_write_metadata.cpp  test_xmp_area.cpp  test_xmp_utils.cpp
