[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exif-mwg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Trenton H", email = "797416+stumpylog@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Trenton H/exif-mwg#readme"
Issues = "https://github.com/Trenton H/exif-mwg/issues"
Source = "https://github.com/Trenton H/exif-mwg"

[tool.hatch.version]
path = "src/exif_mwg/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/exif_mwg tests}"

[tool.coverage.run]
source_pkgs = ["exif_mwg", "tests"]
branch = true
parallel = true
omit = [
  "src/exif_mwg/__about__.py",
]

[tool.coverage.paths]
exif_mwg = ["src/exif_mwg", "*/exif-mwg/src/exif_mwg"]
tests = ["tests", "*/exif-mwg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
